--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ node_js:
   - '0.8'
   - '0.10'
 before_script:
-  - 'npm install -g bower grunt-cli'
-  - 'bower install'
-  - 'export DISPLAY=:99.0'
-  - 'sh -e /etc/init.d/xvfb start'
+  - gem update --system
+  - gem install compass
+  - npm install -g bower grunt-cli
+  - bower install
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 script:
-  - 'grunt test'
+  - grunt test
