--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "meetupFrontend",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.0.7",
+    "angular": "1.0.8",
     "json3": "~3.2.4",
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
@@ -13,5 +13,9 @@
   "devDependencies": {
     "angular-mocks": "~1.0.7",
     "angular-scenario": "~1.0.7"
+  },
+  "resolutions": {
+    "jquery": "~2.0.3",
+    "angular": "1.0.8"
   }
 }
