--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "angularjs-rails-resource": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
