--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "~1.0.7",
     "jquery": "~2.0.3",
     "angularjs-rails-resource": "~0.2.2",
-    "compass-mixins": "~1.0.0"
+    "compass-mixins": "~1.0.0",
+    "angular-ui-router": "~0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
