--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "jquery": "~2.0.3",
     "angularjs-rails-resource": "~0.2.2",
     "compass-mixins": "~1.0.0",
-    "angular-ui-router": "~0.2.0"
+    "angular-ui-router": "~0.2.0",
+    "jquery-nearest": "~1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
