--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angularjs-rails-resource": "~0.2.2",
     "compass-mixins": "~1.0.0",
     "angular-ui-router": "~0.2.0",
-    "jquery-nearest": "~1.2.1"
+    "jquery-nearest": "~1.2.1",
+    "angular-i18n": "~1.0.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
