--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "compass-mixins": "~1.0.0",
     "angular-ui-router": "~0.2.0",
     "jquery-nearest": "~1.2.1",
-    "angular-i18n": "~1.0.8"
+    "angular-i18n": "~1.0.8",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
