--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-ui-router": "~0.2.0",
     "jquery-nearest": "~1.2.1",
     "angular-i18n": "~1.0.8",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "jquery-zclip": "~1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
