--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery-nearest": "~1.2.1",
     "angular-i18n": "~1.0.8",
     "underscore": "~1.5.2",
-    "jquery-zclip": "~1.1.3"
+    "jquery-zclip": "~1.1.3",
+    "jscrollpane": "~2.0.14"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
